--- a/scss/conf/mixins.scss
+++ b/scss/conf/mixins.scss
@@ -20,9 +20,35 @@
 /// @param {String} $emptySymbol - Symbol that will represent empty state.
 /// @param {String} $fillSymbol - Symbol that will represent full state.
 /// Generates rules
-@mixin createRating($max,$emptySymbol,$fillSymbol) {
+@mixin createRating($max,$emptySymbol,$fillSymbol, $color) {
+	all               : unset;
+	-webkit-appearance: none;
+
+	&::-webkit-meter-bar,
+	&::-webkit-meter-even-less-good-value,
+	&::-webkit-meter-inner-element,
+	&::-webkit-meter-optimum-value,
+	&::-webkit-meter-suboptimum-value {
+		background: none;
+	}
+
+	&::-moz-meter-bar {
+		-moz-appearance: none;
+	}
+
+	&:-moz-meter-optimum::-moz-meter-bar,
+	&:-moz-meter-sub-optimum::-moz-meter-bar,
+	&:-moz-meter-sub-sub-optimum::-moz-meter-bar {
+		background: none;
+	}
+	display           : none;
+
+	& + span {
+		float: right;
+		color: $color;
+	}
 	@for $value from 1 through $max {
-		&[value="#{$value}"]::before {
+		&[value="#{$value}"] + span::before {
 			$c     : '';
 			@for $i from 1 through $max {
 				@if $i <= $value {
